Update textarea placeholder text for observations

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
                 <div class="section">
                     <label>Observaciones de Gestión</label>
-                    <textarea name="Mensaje" rows="4" placeholder="Indique plazos de entrega, listados de nombres o requerimientos especiales."></textarea>
+                    <textarea name="Mensaje" rows="4" placeholder="Indique detalles del diseño que debamos saber y requerimientos especiales."></textarea>
                     
                     <div class="footer-summary">
                         <div>
