--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="grid">
                         <div class="form-group">
                             <label>Carrera</label>
-                            <input type="text" name="Carrera" placeholder="Ej: Ingeniería Agroalimentaria" required>
+                            <input type="text" name="Carrera" placeholder="Ingeniería Agroalimentaria" required>
                         </div>
                         <div class="form-group">
                             <label>Representante / Responsable</label>
