Simplify print location options in select menu

--- a/index.html
+++ b/index.html
@@ -437,10 +437,8 @@
                         <div class="form-group">
                             <label>Ubicación de Impresión</label>
                             <select name="Ubicacion">
-                                <option value="Pecho Izq">Pecho Izquierdo (Discreto)</option>
-                                <option value="Pecho Centro">Pecho Central (Principal)</option>
-                                <option value="Espalda">Espalda Completa</option>
-                                <option value="Manga">Personalización en Manga</option>
+                                <option value="Pecho">Pecho</option>
+                                <option value="Espalda">Espalda</option>
                             </select>
                         </div>
                         <div class="form-group">
