Change label from 'Carrera' to 'Carrera y curso'

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     <div class="section-title"><div class="step-num">1</div> Datos de la Solicitud</div>
                     <div class="grid">
                         <div class="form-group">
-                            <label>Carrera</label>
+                            <label>Carrera y curso</label>
                             <input type="text" name="Carrera" placeholder="Ingeniería Agroalimentaria" required>
                         </div>
                         <div class="form-group">
